[package]
name = "rust_image_random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.0"

